still need to confirm random test vectors

--- a/deductive_sim/Makefile
+++ b/deductive_sim/Makefile
@@ -1,8 +1,8 @@
 CC = g++
 FLAGS= -std=c++11
 
-dsim: main.o Gate.o
-	$(CC) $(FLAGS) main.o Gate.o -o dsim
+dsim: main.o Gate.o Fault.o
+	$(CC) $(FLAGS) main.o Gate.o Fault.o -o dsim
 
 main.o: main.cpp Gate.h Fault.h
 	$(CC) $(FLAGS) -c main.cpp
@@ -10,4 +10,12 @@ main.o: main.cpp Gate.h Fault.h
 Gate.o: Gate.cpp Gate.h Fault.h
 	$(CC) $(FLAGS) -c Gate.cpp
 
+Fault.o: Fault.cpp Fault.h
+	$(CC) $(FLAGS) -c Fault.cpp
+
 all: dsim
+
+.PHONY : clean
+clean:
+	-rm *.o dsim
+
